# Lyra_musicathon

./: .dockerignore  .gitignore  .replit  CLAUDE.md  Dockerfile  LICENSE  NIGHT_REPORT.md  README.md  SUBMISSION.md  lyra.txt
archive/: README.md  lyra_decisions_and_buildplan.md  mock_engine.py
backend/: agent.py  app.py  engine_bridge.py  mock_engine.py  pyproject.toml  requirements.txt
docs/: FRONTEND_HANDOFF.md  HOW_IT_WORKS.md  PITCH.md  VISION.md
engine/: .env.example  .gitignore  README.md  enrich_seed.py  musixmatch.py  notebook.ipynb  prompt_build_dataset.md  pyproject.toml  requirements.txt  softmap.py  taxonomy.py  trajectory.py
engine/data/: node_embeddings.npz  seed_enriched.json  seed_tracks.csv  seed_tracks.json  user_prefs.json
shared/: schema.py
web/: .env.example  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/agent/: route.ts
web/src/app/api/entry/: route.ts
web/src/app/api/journey/: route.ts
web/src/app/api/preview/: route.ts
web/src/app/api/refill/: route.ts
web/src/app/api/trajectory/: route.ts
web/src/components/: CompassScene.tsx  ConversationPanel.tsx  EmotionWheel.tsx  EmotionalAtlas.tsx  KeyboardMock.tsx  LyricBanner.tsx  MoodPicker.tsx  PlayerBar.tsx  PlaylistView.tsx  RotatingWheel.tsx  SessionView.tsx  Settings.tsx  SplitView.tsx  StepCard.tsx
web/src/components/ui/: button.tsx
web/src/lib/: mockAgent.test.ts  mockAgent.ts  mockData.ts  mockEngine.ts  taxonomy.ts  types.ts  utils.ts  webgl.ts
