[project]
name = "lyra-backend"
version = "0.1.0"
description = "Lyra backend — FastAPI service (engine + agent)"
# datapizza-ai requires Python >=3.10,<3.13 → we pin 3.12 (see .python-version)
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.137",
    "uvicorn[standard]>=0.49",
    "pydantic>=2",
    "datapizza-ai>=0.1.0",
]

[tool.uv]
package = false
