[project]
name = "lyra-engine"
version = "0.1.0"
description = "Lyra engine — data science: dataset building and lyrics analysis"
# kept consistent with backend (3.12)
requires-python = ">=3.10,<3.13"
dependencies = [
    "spotipy>=2.23",
    "python-dotenv>=1",
    "pandas>=2",
    "jupyter>=1",
    "ipykernel>=6",
    "sentence-transformers>=5.6.0",
]

[tool.uv]
package = false
